[package]
name = "rust-ring-ed25519"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.1", features = ["derive"] }
hex = "0.4.3"
ring = { version = "0.16.20", features = ["std"] }
thiserror = "1.0.38"
